# credit-assessment

./: .dockerignore  .env.example  .gitignore  .paircoder-workspace.yaml  ARCHITECTURE.md  BABY_INERTIA_INTEGRATION_REPORT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  METHODOLOGY.md  Makefile  PLAN.md  README.md  ROADMAP.md  alembic.ini  docker-compose.deploy.yml  docker-compose.loadtest.yml  docker-compose.prod.yml  docker-compose.yml  montgowork-credit-integration.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  sdk-ci.yml
.paircoder/: config.yaml
.paircoder/context/: state.md
.paircoder/plans/: plan-2026-03-None.plan.yaml  plan-2026-03-Sprint 13: Code Review Fixes (Sprint 12 Review).plan.yaml  plan-2026-03-Sprint 14: Code Review Fixes (Sprint 13 Review).plan.yaml  plan-2026-03-launch-readiness.plan.yaml  plan-2026-03-plan-2026-03-code-review-fixes-sprint11.plan.yaml  plan-2026-03-plan-2026-03-code-review-fixes-sprint12.plan.yaml  plan-2026-03-plan-2026-03-code-review-fixes-sprint9.plan.yaml  plan-2026-03-plan-2026-03-security-hardening.plan.yaml  plan-2026-03-plan-2026-03-sprint-15.plan.yaml  plan-2026-03-plan-2026-03-sprint-25.plan.yaml  plan-2026-03-plan-2026-03-sprint-27-security-audit-3.plan.yaml  plan-2026-03-plan-saas-readiness.plan.yaml  plan-2026-03-sprint-17.plan.yaml  plan-2026-03-sprint-18.plan.yaml  plan-2026-03-sprint-19.plan.yaml  plan-2026-03-sprint-20.plan.yaml  plan-2026-03-sprint-21.plan.yaml  plan-2026-03-sprint-22.plan.yaml  plan-2026-03-sprint-23.plan.yaml  plan-2026-03-sprint-24.plan.yaml  plan-2026-03-sprint-26-security-audit-2.plan.yaml
.paircoder/tasks/: T1.1.task.md  T1.2.task.md  T1.3.task.md  T1.4.task.md  T1.5.task.md  T10.1.task.md  T10.2.task.md  T10.3.task.md  T11.1.task.md  T11.2.task.md  T11.3.task.md  T12.1.task.md  T12.2.task.md  T12.3.task.md  T13.1.task.md  T13.2.task.md  T14.1.task.md  T14.2.task.md  T15.1.task.md  T15.2.task.md  T15.3.task.md  T16.1.task.md  T17.1.task.md  T17.2.task.md  T17.3.task.md  T18.1.task.md  T18.2.task.md  T18.3.task.md  T18.4.task.md  T19.1.task.md  T19.2.task.md  T19.3.task.md  T2.1.task.md  T2.2.task.md  T2.3.task.md  T2.4.task.md  T2.5.task.md  T20.1.task.md  T20.2.task.md  T20.3.task.md  (+58 more)
.paircoder/tasks/plan-2026-03-launch-readiness/: T1.1.md  T1.2.md  T1.3.md  T1.4.md  T1.5.md
alembic/: env.py
alembic/versions/: 32b788f7dfe7_initial_tables_assessment_records_and_.py  6e3e2e47a5a2_expand_schema_new_tables_and_columns_.py  ff8e653e8e69_add_user_assessments_and_reset_tokens_.py
alerting/: alertmanager.yml  prometheus_rules.yml
deploy/: _common.sh  blue_green.sh  rollback.sh
docs/: CODEBASE_MAP.md
docs/runbooks/: database-recovery.md  deployment-rollback.md  security-incident.md  service-outage.md
loadtests/: locustfile.py
scripts/: backup.sh  restore.sh
sdks/go/: auth.go  client.go  client_test.go  errors.go  go.mod  models.go
sdks/javascript/: package-lock.json  package.json
sdks/javascript/src/: auth.ts  client.ts  errors.ts  index.ts  models.ts
sdks/javascript/tests/: client.test.ts
sdks/python/: pyproject.toml
sdks/python/credit_assessment_client/: __init__.py  auth.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_client.py
src/: main.py
src/credit_assessment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/modules/credit/: __init__.py  admin_routes.py  alerting.py  api_docs.py  assess_routes.py  assess_tasks.py  assessment.py  audit.py  auth.py  auth_routes.py  backup.py  (+57 more)
(+137 files in other folders)
