[project]
name = "credit-assessment"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.25",
    "slowapi>=0.1",
    "structlog>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "prometheus-fastapi-instrumentator>=7.0",
    "sentry-sdk[fastapi]>=2.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "coverage>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/modules/credit"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
