[project]
name = "credit-assessment"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.25",
    "slowapi>=0.1",
    "structlog>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "cryptography>=46.0.5",
    "passlib[bcrypt]>=1.7",
    "prometheus-fastapi-instrumentator>=7.0",
    "sentry-sdk[fastapi]>=2.0",
    "email-validator>=2.0",
    "stripe>=8.0",
    "httpx>=0.27",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "coverage>=7.0",
    "locust>=2.0",
    "flask>=3.1.3",
    "werkzeug>=3.1.6",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Exception in thread.*_connection_worker_thread:pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.coverage.run]
source = ["src/modules/credit"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
